<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_ur5_description</name>
  <version>2.0.6</version>
  <description>panda Resources used for MoveIt testing</description>

  <author email="d.shanahan1@lancaster.ac.uk">Declan Shanahan</author>

  <maintainer email="d.shanahan1@lancaster.ac.uk">Declan Shanahan</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
